Log spam for every new user session on bare metal or non-spice VMs
My Endless OS (a Debian derivative) and my Fedora systems both show output like the following for every new user session:
Jan 16 16:06:03 gelf spice-vdagent[5804]: Cannot access vdagent virtio channel /dev/virtio-ports/com.redhat.spice.0
Jan 16 16:06:03 gelf gnome-session[5525]: gnome-session-binary[5525]: WARNING: App 'spice-vdagent.desktop' exited with code 1
On both distros, spice-vdagent is installed by default. (I can only speak for Endless, but presumably Fedora's rationale is the same: this improves the out-of-the-box experience in a VM.)
It is sad that most systems will get one LOG_ERR level message, and one WARNING, for every new user session. Can this be made to fail more gracefully in the case where spice-vdagent is simply not needed?